--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@ pom.xml.asc
 .nrepl-history
 .nrepl-port
 words-alpha.txt
-.clj-kondo/.cache/
-.lsp/.cache/
-.lsp/sqlite*.db
-.calva/output-window/
+**/.clj-kondo/.cache/
+**/.lsp/.cache/
+**/.lsp/sqlite*.db
+**/.calva/output-window/
 .DS_Store
 .portal/
 .wally/
@@ -20,3 +20,4 @@ words-alpha.txt
 node_modules/
 tsconfig.tsbuildinfo
 *.vsix
+
