--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "acorn-loose": "^8.4.0",
     "axios": "^1.6.0",
-    "posthtml-parser": "^0.12.0"
+    "posthtml-parser": "^0.12.0",
+    "turndown": "^7.2.1"
   }
 }
