--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "acorn-loose": "^8.4.0",
     "axios": "^1.6.0",
     "posthtml-parser": "^0.12.0",
-    "turndown": "^7.2.1"
+    "turndown": "^7.2.1",
+    "turndown-plugin-gfm": "^1.0.2"
   }
 }
